# PoryExtract

./: .gitignore  README.md  configure_env  meson.build
include/: action.h  binary.h  env.h  knarc.h  nitrogfx.h  skip_unpack.hpp  species.h  wrap.h
src/: binary.cpp  knarc.cpp  main.cpp  meson.build  nitrogfx.cpp  poke_sprites.cpp  species.cpp  wrap.cpp
subprojects/: .gitignore  ndstool.wrap
